--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   </head>
 
   <body>
-    <div id="container">
-      <canvas id="gameCanvas" width="512" height="288"></canvas>
-    </div>
+    <div id="container"><canvas id="gameCanvas"></canvas></div>
 
     <div id="logs"></div>
 
